grammar.js
    source_file: $ => seq(
      repeat($._newline),
      optional($.module_header),
      repeat($.attribute_statement),
      optional($.module_options),
      optional($.module_body),
    ),

    module_header: $ => seq(
      kw('VERSION'),
      $.float_literal,
      optional(kw('CLASS')),
      $._terminator,
      optional($.module_config),
    ),

    attribute_statement: $ => seq(
      kw('Attribute'),
      field('name', $.dotted_name),
      '=',
      field('value', $.literal),
      $._terminator,
    ),

    dotted_name: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    ),

    module_options: $ => repeat1(
      seq(
        choice(
          seq(kw('Option'), kw('Explicit')),
          seq(kw('Option'), kw('Base'), /[01]/),
          seq(kw('Option'), kw('Compare'), choice(kw('Binary'), kw('Text'))),
          seq(kw('Option'), kw('Private'), kw('Module')),
        ),
        $._terminator,
      )
    ),

    module_body: $ => repeat1(
      choice(
        $.sub_declaration,
        $.function_declaration,
        $.property_get_declaration,
        $.property_set_declaration,
        $.property_let_declaration,
        $.declare_declaration,
        $.type_declaration,
        $.enum_declaration,
        $.event_declaration,
        $.const_declaration,
        $.dim_statement,
        $.deftype_declaration,
        $.implements_declaration,
        $.compiler_directive,
        $.statement,
        $._newline,
      )
    ),

    // ── Visibility ──
    visibility: $ => choice(kw('Public'), kw('Private'), kw('Friend')),

    // ── Sub and Function declarations ──
    sub_declaration: $ => seq(
      optional($.visibility),
      optional(kw('Static')),
      kw('Sub'),
      field('name', $._ambiguous_identifier),
      optional(field('parameters', $.parameter_list)),
      $._terminator,
      optional(field('body', $.block)),
      kw('End'), kw('Sub'),
      $._terminator,
    ),

    function_declaration: $ => seq(
      optional($.visibility),
      optional(kw('Static')),
      kw('Function'),
      field('name', $._ambiguous_identifier),
      optional(field('parameters', $.parameter_list)),
      optional(seq(kw('As'), field('return_type', $.type_expression))),
      $._terminator,
      optional(field('body', $.block)),
      kw('End'), kw('Function'),
      $._terminator,
    ),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => seq(
      optional(kw('Optional')),
      optional($.modifier),
      field('name', $._ambiguous_identifier),
      optional($.type_hint),
      optional(seq('(', optional($.subscripts), ')')),
      optional(seq(kw('As'), optional(kw('New')), field('type', $.type_expression))),
      optional(seq('=', field('default', $.expression))),
    ),

    modifier: $ => choice(kw('ByVal'), kw('ByRef'), kw('ParamArray')),

    type_expression: $ => choice(
      kw('Boolean'), kw('Byte'),    kw('Integer'), kw('Long'),
      kw('Single'),  kw('Double'),  kw('Currency'), kw('Date'),
      kw('String'),  kw('Object'),  kw('Variant'),  kw('Any'),
      seq(kw('String'), '*', choice($.integer_literal, $.identifier)),
      $._ambiguous_identifier,
    ),

    block: $ => repeat1(choice($.statement, $._newline)),

    statement: $ => choice(
      $.assignment_statement,
      $.let_statement,
      $.set_statement,
      $.call_statement,
      $.dim_statement,
      $.redim_statement,
      $.const_statement,
      $.if_statement,
      $.select_case_statement,
      $.for_next_statement,
      $.for_each_statement,
      $.while_statement,
      $.do_loop_statement,
      $.with_statement,
      $.goto_statement,
      $.gosub_statement,
      $.return_statement,
      $.on_error_statement,
      $.on_error_resume_next_statement,
      $.on_goto_statement,
      $.on_gosub_statement,
      $.resume_statement,
      $.exit_statement,
      $.label_statement,
      $.raise_event_statement,
      $.mid_statement,
      $.lset_statement,
      $.rset_statement,
      $.open_statement,
      $.close_statement,
      $.print_statement,
      $.write_statement,
      $.input_statement,
      $.line_input_statement,
      $.get_statement,
      $.put_statement,
      $.seek_statement,
      $.beep_statement,
      $.stop_statement,
      $.end_statement,
      $.kill_statement,
      $.name_statement,
      $.chdir_statement,
      $.chdrive_statement,
      $.mkdir_statement,
      $.rmdir_statement,
      $.filecopy_statement,
      $.date_statement,
      $.time_statement,
      $.load_statement,
      $.unload_statement,
      $.randomize_statement,
      $.erase_statement,
      $.lock_statement,
      $.unlock_statement,
      $.send_keys_statement,
      $.app_activate_statement,
      $.save_setting_statement,
      $.delete_setting_statement,
      $.error_statement,
      $.reset_statement,
      $.option_statement,
    ),

    expression: $ => choice(
      $.literal,
      $.new_expression,
      $.typeof_is_expression,
      $.addressof_expression,
      $.parenthesized_expression,
      $.unary_expression,
      $.binary_expression,
      $.member_access_expression,
      $.with_member_access_expression,
      $.index_expression,
      $.call_expression,
      $.file_number_expression,
      $._ambiguous_identifier,
    ),

    // File number expression: #n — used as argument to Input(), LOF(), etc.
    new_expression: $ => seq(
      kw('New'),
      field('type', $._ambiguous_identifier),
    ),

    parenthesized_expression: $ => seq('(', $.expression, ')'),

    unary_expression: $ => prec(8, seq(
      field('operator', choice(kw('Not'), '-', '+')),
      field('operand', $.expression),
    )),

    binary_expression: $ => {
      const table = [
        [7,  '^'],
        [6,  choice('*', '/', '\\', kw('Mod'))],
        [5,  choice('+', '-')],
        [4,  '&'],
        [3,  choice('=', '<>', '<', '>', '<=', '>=', kw('Is'), kw('Like'))],
        [2,  kw('And')],
        [1,  choice(kw('Or'), kw('Xor'))],
        [0,  choice(kw('Eqv'), kw('Imp'))],
      ];
      return choice(...table.map(([precedence, op]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          field('operator', op),
          field('right', $.expression),
        ))
      ));
    },

    member_access_expression: $ => prec.left(10, seq(
      field('object', $.expression),
      '.',
      field('name', $._ambiguous_identifier),
    )),

    index_expression: $ => prec(9, seq(
      field('object', $.expression),
      '(',
      seq($.argument, repeat(seq(',', optional($.argument)))),
      ')',
    )),

    argument: $ => choice(
      // Named argument: foo := expr  (keyword can be a reserved word used as name)
      prec(1, seq(field('keyword', $._ambiguous_identifier), ':=', optional(field('value', $.expression)))),
      // Positional with modifier: ByVal expr or ByRef expr
      seq(choice(kw('ByVal'), kw('ByRef')), field('value', $.expression)),
      // Plain expression
      field('value', $.expression),
    ),

    _left_hand_side: $ => choice(
      $.member_access_expression,
      $.with_member_access_expression,
      $.index_expression,
      $._ambiguous_identifier,
    ),

    // ── Assignment and Set statements ──
    assignment_statement: $ => seq(
      field('target', $._left_hand_side),
      '=',
      field('value', $.expression),
      $._terminator,
    ),

    set_statement: $ => seq(
      kw('Set'),
      field('target', $._left_hand_side),
      '=',
      field('value', $.expression),
      $._terminator,
    ),

    dim_statement: $ => seq(
      choice(kw('Dim'), kw('Static'), kw('Public'), kw('Private')),
      optional(kw('WithEvents')),
      commaSep1($.variable_declarator),
      $._terminator,
    ),

    literal: $ => choice(
      $.boolean_literal,
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.date_literal,
      kw('Nothing'),
      kw('Empty'),
      kw('Null'),
    ),

    boolean_literal: $ => token(choice(
      /[Tt][Rr][Uu][Ee]/,
      /[Ff][Aa][Ll][Ss][Ee]/,
    )),

    integer_literal: $ => token(choice(
      /\d+[%&]?/,
      /&[Hh][0-9A-Fa-f]+[%&]?/,
      /&[Oo][0-7]+[%&]?/,
    )),

    float_literal: $ => token(choice(
      /\d+\.\d*([Ee][+-]?\d+)?[!#@]?/,
      /\.\d+([Ee][+-]?\d+)?[!#@]?/,
      /\d+[Ee][+-]?\d+[!#@]?/,
      /\d+[!#@]/,
    )),

    string_literal: $ => token(seq('"', repeat(choice(/[^"\r\n]/, '""')), '"')),

    _ambiguous_identifier: $ => choice(
      $.identifier,
      alias(kw('Name'),  $.identifier),
      alias(kw('Date'),  $.identifier),
      alias(kw('Time'),  $.identifier),
      alias(kw('Error'), $.identifier),
      alias(kw('Input'), $.identifier),
      alias(kw('Left'),  $.identifier),
      alias(kw('Right'), $.identifier),
      alias(kw('Mid'),   $.identifier),
      alias(kw('Open'),  $.identifier),
      alias(kw('Close'), $.identifier),
      alias(kw('Reset'), $.identifier),
      alias(kw('Width'), $.identifier),
      alias(kw('Type'),  $.identifier),
      alias(kw('Enum'),  $.identifier),
      alias(kw('Event'), $.identifier),
    ),

    identifier: $ => token(/[A-Za-z_][A-Za-z_0-9]*[$%&!#@]?/),

    _newline: $ => /\r?\n/,
    _terminator: $ => choice($._newline, ':'),
  },
});

// ──────────────── helpers ────────────────

function kw(word) {
  return token(ci(word));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function ci(keyword) {
  return new RegExp(
    keyword.split('').map(ch =>
      /[A-Za-z]/.test(ch) ? `[${ch.toLowerCase()}${ch.toUpperCase()}]`
                           : ch.replace(/[-/\\^$*+?.()|[\]{}]/g, '\\$&')
    ).join('')
  );
}
