test/corpus/module.txt
================================================================================
Module header for class module
================================================================================

VERSION 1.0 CLASS

--------------------------------------------------------------------------------

(source_file
  (module_header
    (float_literal)))

================================================================================
Attribute statement
================================================================================

Attribute VB_Name = "MyClass"

--------------------------------------------------------------------------------

(source_file
  (attribute_statement
    name: (dotted_name
      (identifier))
    value: (literal
      (string_literal))))

================================================================================
Option Explicit
================================================================================

Option Explicit

--------------------------------------------------------------------------------

(source_file
  (module_options))

================================================================================
Combined module header and options
================================================================================

VERSION 1.0 CLASS
Attribute VB_Name = "Class1"
Option Explicit

--------------------------------------------------------------------------------

(source_file
  (module_header
    (float_literal))
  (attribute_statement
    name: (dotted_name
      (identifier))
    value: (literal
      (string_literal)))
  (module_options))
